--- a/web/prenota.html
+++ b/web/prenota.html
@@ -11,36 +11,38 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="CSS/stylesheetPren.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/navbar.css"/>
     <script type="text/javascript" src="JS/navbar.js"></script>
     <script type="text/javascript" src="JS/footer.js"></script>
 
 </head>
 <body>
 <div id="pren">
+
     <header>
         <nav class="navbar navbar-expand-lg navbar-mainbg">
             <div class="container">
-                <a class="navbar-brand navbar-logo" href="javascript:void(0);"><img src="img/graduate.png" id="graduate" alt="Logo"/></a>
+                <a class="navbar-brand navbar-logo" href="index.html"><img src="img/graduate.png" id="graduate" alt="Logo"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars text-white"></i>
+                    <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
                         <li class="nav-item">
-                            <a class="nav-link" href="admin.html" v-if="utente.isAdmin==1"><i class="far fa-calendar-alt"></i>Admin</a>
+                            <a class="nav-link" href="admin.html" v-if="utente.isAdmin==1">Admin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="prenotazioni.html"><i class="fas fa-tachometer-alt"></i>I miei corsi</a>
+                            <a class="nav-link" href="prenotazioni.html">I miei corsi</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="javascript:void(0);"><i class="fas fa-tachometer-alt"></i>Prenota</a>
+                            <a class="nav-link" href="javascript:void(0);">Prenota</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html"><i class="far fa-address-book"></i>Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" v-on:click="logout" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Logout</a>
+                            <a class="nav-link" v-on:click="logout" href="javascript:void(0);">Logout</a>
                         </li>
                         <!--<li class="nav-item">
                             <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
@@ -78,7 +80,7 @@
                     <table class="table table-hover">
                         <tbody>
                         <tr v-for="doc in docenti">
-                            <td v-on:click="getRipetizioni(doc.id_docente,doc.nome,doc.cognome)"><a href="#!">{{doc.nome}} {{doc.cognome}}</a></td>
+                            <td v-on:click="getRipetizioni(doc.nome)"><a href="#!">{{doc.nome}}</a></td>
                         </tr>
                         </tbody>
                     </table>
@@ -88,18 +90,14 @@
             <div v-show="currentstep == 3">
                 <h3>Scegli l'ora e il giorno: </h3>
                     <div v-if="vuoto">
-                        Spiacenti, non ci sono ripetizioni disponibili per {{materia}} con {{nomeprof}}.
+                        Spiacenti, non ci sono ripetizioni disponibili per {{materia}} con {{prof}}.
                     </div>
                     <div v-else>
                         <table class="table table-bordered table-hover">
                             <thead class="celle-scure">
                                 <tr>
                                     <th>Giorno & Ora</th>
-                                    <th>Lunedi'</th>
-                                    <th>Martedi'</th>
-                                    <th>Mercoledi'</th>
-                                    <th>Giovedi'</th>
-                                    <th>Venerdi'</th>
+                                    <th v-for="g in giorno">{{g}}</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -124,7 +122,7 @@
                             <!--<img class="card-img-top" src="..." alt="Card image cap">-->
                                 <h3 class="card-header"><strong><u>Resoconto</u></strong></h3>
                                 <div class="card-body">
-                                    <h5 class="card-text ml-3">Corso: {{materia}} <br>Docente: {{nomeprof}} <br> Ora: {{ora[h]}} <br> Giorno: {{giorno[g]}}</h5>
+                                    <h5 class="card-text ml-3">Corso: {{materia}} <br>Docente: {{prof}} <br> Ora: {{ora[h]}} <br> Giorno: {{giorno[g]}}</h5>
                                     <hr class="mb-2">
                                     <div class="text-center"><a href="#" class="btn btn-light text-primary" v-on:click="prenota"><strong>CONFERMA</strong></a></div>
 
@@ -145,6 +143,7 @@
         </div>
     <!--<my-footer></my-footer>-->
 </div>
+
 <script>
     var prenota = new Vue ({
         el:'#pren',
@@ -169,7 +168,6 @@
             prof:'',
             h:'',
             g:'',
-            nomeprof:'',
 
 
             ora:[
@@ -266,10 +264,9 @@
                     }
                 });
             },
-            getRipetizioni(docente,nome,cognome){
+            getRipetizioni(docente){
                 var self = this;
                 self.prof= docente;
-                self.nomeprof= nome +" "+ cognome;
                 $.post(this.link2, {action:'RIP', doc: docente, corso: this.materia}, function(data) {
                     data = JSON.parse(data);
                     if(data[0]===true){//sessione attiva login effettuato
@@ -301,7 +298,7 @@
                     data = JSON.parse(data);
                     console.log(data);
                     if(data[0]===true){//sessione attiva, prenotazione effettuata
-                        //window.location = "prenotazioni.html"
+                        window.location = "prenotazioni.html"
                         self.errore=false;
                     }
                     else if(data[0] === "errore"){//sessione attiva, errore prenotazione
@@ -311,7 +308,7 @@
                         alert("Hai già una prenotazione in questo orario!")
                     }
                     else{//sessione scaduta
-                        //window.location = "index.html"
+                        window.location = "index.html"
                     }
                 });
             },
@@ -319,13 +316,7 @@
                 var self = this;
                 self.changeClass(false);
                 self.currentstep = self.currentstep-1;
-            },/*
-            indicatorclass(){
-                return {
-                    active: this.step.id == this.currentstep,
-                    complete: this.currentstep > this.step.id
-                };
-            },*/
+            },
             changeClass:function(flag){//flag = true allora ti sposti in avanti, all'indietro altrimenti
                 var self = this;
                 if(flag){
