--- a/web/login.html
+++ b/web/login.html
@@ -15,7 +15,8 @@
 
 </head>
 <body>
-<div id="log">
+<div id="log" class="full-height">
+    <div class="content-wrap">
     <header>
         <nav class="navbar navbar-expand-lg navbar-mainbg">
             <div class="container">
@@ -65,6 +66,7 @@
             </div>
 
         </div>
+    </div>
     </div>
     <my-footer></my-footer>
 </div>
