--- a/web/prenota.html
+++ b/web/prenota.html
@@ -17,8 +17,8 @@
 
 </head>
 <body>
-<div id="pren">
-
+<div id="pren" class="full-height">
+    <div class="content-wrap">
     <header>
         <nav class="navbar navbar-expand-lg navbar-mainbg">
             <div class="container">
@@ -133,7 +133,7 @@
                 </div>
             </div>
 
-        <div class="container mt-3">
+        <div class="container mt-3 mb-5">
             <div class="row">
                 <div class="col-4"></div>
                 <button type="button" id="back" class="btn col-4" v-on:click="stepBack" :disabled="currentstep==1"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
@@ -141,8 +141,10 @@
             </div>
         </div>
         </div>
-    <!--<my-footer></my-footer>-->
+    </div>
+    <my-footer></my-footer>
 </div>
+
 
 <script>
     var prenota = new Vue ({
